--- a/templates/layout.html.twig
+++ b/templates/layout.html.twig
@@ -6,7 +6,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
         {% block stylesheets %}{% endblock %}
         <script>
-            var rShief = {
+            var castle = {
+                serverUrl: {{ (app['elasticsearch.host'] ~ '/' ~ app['elasticsearch.index']) | json_encode | raw }} ,
                 basepath: {{ app.request.basepath | json_encode | raw }},
                 baseurl: {{ app.request.baseurl | json_encode | raw }}
             };
