--- a/web/templates/components/result/atom.html
+++ b/web/templates/components/result/atom.html
@@ -2,7 +2,7 @@
     <img class="media-object" ng-src="{{doc._source | atomThumbnail}}" alt="{{doc._source.name}}" width="128" height="128" />
 </div>
 <div class="media-body">
-    {{doc._source.source.title.text}} {{doc._source.published | date }}
+    <strong>{{ doc._source.authors[0].name }}</strong> {{doc._source.source.title.text}} {{doc._source.published | date }}
     <h4><a ng-href="{{ doc._source.links | alternateHref }}">{{doc._source.title.text}}</a></h4>
     <atom-text-construct atom-element="doc._source.summary"></atom-text-construct>
     <ul>
